控制类返回值处理